# boot

./: .gitignore  CMakeLists.txt  README.md  default.nix  flake.nix
src/: main.c
